--- a/Random-Forest-XG-Boost-Logistic-Regression-and-ROC.ipynb
+++ b/Random-Forest-XG-Boost-Logistic-Regression-and-ROC.ipynb
@@ -45,7 +45,7 @@
         "id": "dsXKJTqTffsM"
       },
       "source": [
-        "This assignment uses logistic regression model  to predict Personal Loan target for the Universal Bank data. The performance of this model will be compared with the previously created models on the same data set and \n",
+        "This task uses logistic regression model  to predict Personal Loan target for the Universal Bank data. The performance of this model will be compared with the previously created models on the same data set and \n",
         "Based on the performance of the models recommendations will be made. \n",
         "\n",
         "\n",
